cleaned jupyter notebooks

--- a/src_data/grain_shields.ipynb
+++ b/src_data/grain_shields.ipynb
@@ -407,7 +407,7 @@
     "ax.set_ylabel(r'$\\tau_{gc,i}^*$', fontsize=20)\n",
     "plt.legend(fontsize=20)\n",
     "cbar = fig.colorbar(d).set_label(label='Slope',size=16)\n",
-    "plt.savefig('critical_grain_all_data.png', dpi=150)\n",
+    "#plt.savefig('critical_grain_all_data.png', dpi=150)\n",
     "plt.show()"
    ]
   }
